2001-12-24  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Yahoo.pm (gui_query): FIXED for not passing debug argument(s)
	(parse_tree): fix for slightly changed output format

	* lib/WWW/Search/Yahoo/News/Advanced.pm (parse_tree): handle new output format

2001-09-13  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/WWW/Search/Yahoo/Japan/News.pm: bugfix, and update pod

2001-09-07  Kingpin  <mthurn@copper.dulles.tasc.com>

	* test.pl: fix all tests, and add new tests for Japan News

	* lib/WWW/Search/Yahoo/Japan/News.pm: new backend!

2001-08-07  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_setup_search): default to OR search

	* test.pl: fix all tests, and add new tests for Advanced News

2001-07-16  Kingpin  <mthurn@tasc.com>

	* test.pl: fix old tests, and add new tests for Advanced News

	* lib/WWW/Search/Yahoo.pm (parse_tree): new method for subclasses to use

	* lib/WWW/Search/Yahoo/News/Advanced.pm: new backend

2001-03-31  Kingpin  <mthurn@tasc.com>
	
	* VERSION 2.22 RELEASED
	
2001-03-30  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Yahoo.pm (native_setup_search): added support for subclassing

	* lib/WWW/Search/Yahoo/UK.pm: new backend

	* lib/WWW/Search/Yahoo/Korea.pm: new backend

2000-12-16
	
	* VERSION 2.21 RELEASED
	
2000-12-15  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): clean up URL parsing (yahoo.com added text to it)

2000-11-11
	
	* VERSION 2.19 RELEASED
	
2000-11-10  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): rewrote parser using HTML::TreeBuilder

2000-09-23
	
	* VERSION 2.17 RELEASED
	
2000-09-22  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): fix description parsing and URL parsing

2000-09-20
	
	* VERSION 2.16 RELEASED
	
2000-09-19  Kingpin  <mthurn@tasc.com>

	* Yahoo.pm (native_retrieve_some): fix gui-style results parsing

2000-09-15
	
	* VERSION 2.15 RELEASED
	
2000-09-14  Kingpin  <mthurn@tasc.com>
