@@ -1,3 +1,7 @@
+2002-03-28  Kingpin  <mthurn@copper.dulles.tasc.com>
+
+	* lib/WWW/Search/Yahoo.pm (parse_tree): clean up description
+
 2001-12-24  Kingpin  <mthurn@copper.dulles.tasc.com>
 
 	* lib/WWW/Search/Yahoo.pm (gui_query): FIXED for not passing debug argument(s)
